tests/parse_print/random_perturb/enum_liberated/change-07/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-07/change-07.essence:8:16:
  |
8 | find z : E2(a..z)
  |                ^
Error: Symbol not found "z"
